Begin mobile first layout

--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
   <head>
     <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="output.css">
     <title>Paris Travel</title>
   </head>
   <body>
     <div class="container">
       <header>
-        <div class="logo"><h1>Paris</h1> <h1>Travel</h1></div>
-        <a href="#">Tours</a>
-        <div class="circle"></div>
-        <a href="#">Travel</a>
-        <div class="circle"></div>
-        <a href="#">Culture</a>
-        <div class="circle"></div>
-        <a href="#">Contact</a>
+          <div class="logo"><h1>Paris</h1> <h1>Travel</h1></div>
+          <nav>
+            <a href="#">Tours</a>
+            <div class="circle"></div>
+            <a href="#">Travel</a>
+            <div class="circle"></div>
+            <a href="#">Culture</a>
+            <div class="circle"></div>
+            <a href="#">Contact</a>
+          </nav>
         <button type="button" name="travel">Sign Up!</button>
       </header>
 
