Continue work on responsive structure

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
         <div class="hero-ad">
           <h2>Join and Travel With Us Today!</h2>
           <h4>You Won't Regret It</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <h3>Tours & Prices</h3>
         </div>
       </main>
       <section class="tours">
         <div class="slideshow-container">
-          <div class="tourSlide fade tour-1">
+          <div class="tourSlide fade tour-1" onclick="plusSlides(1)">
             <div class="tour-details">
               <h3>10 Days</h3>
               <h2>The Full Parisian</h2>
@@ -42,7 +42,7 @@
             </div>
           </div>
 
-          <div class="tourSlide fade tour-2">
+          <div class="tourSlide fade tour-2" onclick="plusSlides(1)">
             <div class="tour-details">
               <h3>7 Days</h3>
               <h2>The City of Love</h2>
@@ -50,16 +50,13 @@
             </div>
           </div>
 
-          <div class="tourSlide fade tour-3">
+          <div class="tourSlide fade tour-3" onclick="plusSlides(1)">
             <div class="tour-details">
               <h3>3 Days</h3>
               <h2>Le Petite Tour</h2>
               <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus.</p>
             </div>
           </div>
-
-          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-          <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
       </section>
 
